# Diary_grabber

./: .gitignore  README.md  logger.py  main.py  pyproject.toml  start.bat
