[tool.poetry]
name = "dnevnik grabber"
version = "2.0.1"
description = ""
authors = ["Tigra323 tigra323_for_github@mail.ru" ]
readme = "README.md"

[tool.poetry.urls]
repository = "https://github.com/tigra323/Diary_grabber"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.6"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
python-dotenv = "^1.0.0"
pytelegrambotapi = "^4.14.0"
fake-useragent = "^1.3.0"
selenium = "^4.14.0"
icecream = "^2.1.3"

[tool.poetry.extras]
debug = ["icecream"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
